crates/kirin-derive-core-2/src/kirin/snapshots/kirin_derive_core_2__kirin__context__tests__with_wraps.snap
---
source: crates/kirin-derive-core-2/src/kirin/context.rs
expression: "format!(\"{:#?}\", data)"
---
Dialect::Struct(
    DialectStruct {
        attrs: KirinGlobalOptions {
            crate_path: Some(
                Path {
                    leading_colon: None,
                    segments: [
                        PathSegment {
                            ident: Ident(
                                some_path,
                            ),
                            arguments: PathArguments::None,
                        },
                    ],
                },
            ),
            type_lattice: Path {
                leading_colon: None,
                segments: [
                    PathSegment {
                        ident: Ident(
                            MyLattice,
                        ),
                        arguments: PathArguments::None,
                    },
                ],
            },
            builder: None,
        },
        statement: Statement {
            attrs: KirinStatementOptions {
                format: None,
                builder: None,
                constant: false,
                pure: false,
                terminator: false,
                crate_path: Ignored,
                type_lattice: Ignored,
            },
            wraps: true,
            fields: [
                Field {
                    attrs: KirinFieldOptions {
                        into: false,
                        default: None,
                        ssa_ty: None,
                    },
                    extra: (),
                },
            ],
            extra: (),
        },
    },
)
